--- a/public/signup.html
+++ b/public/signup.html
@@ -17,7 +17,7 @@
   <body>
     <div class="signup-container">
       <h1>Sign Up</h1>
-      <form id="signupForm" onsubmit="signupForm(event)">
+      <form id="signupForm" >
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" id="username" name="username" required />
